Fix layout bug on tablets
Fixed a layout bug on index page for tablets and certain sized browser-windows by adding a min-height
to the media-query.

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ p {
 
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1200px) and (min-height:1050px) {
 
     .hero {
         font-size: 8rem;
